Security: Remove sensitive files and add .env.example
- Added .env.example template with placeholders
- Updated .gitignore to exclude .env and sensitive files
- Removed .env and .mobileprovision from git tracking
- These files remain on local disk but won't be pushed to GitHub

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,14 @@ iOSInjectionProject/
 
 # Mac
 .DS_Store
+
+# Environment Variables & Secrets
+.env
+*.mobileprovision
+*.p12
+*.cer
+*.certSigningRequest
+
+# Archives
+*.xcarchive
+Export/
